--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
+    "node-schedule": "^2.1.0",
     "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
