--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
+    "jest": "^28.1.2",
     "node-schedule": "^2.1.0",
     "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
