--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
@@ -23,17 +24,22 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@types/jest": "^28.1.4",
     "@types/node": "^16.11.7",
     "@types/react": "^18.0.8",
     "autoprefixer": "^10.4.7",
     "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
+    "jest-environment-jsdom": "^28.1.2",
     "next": "^12.1.6",
     "nextron": "^8.1.0",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "tailwindcss": "^3.0.24",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.2",
     "typescript": "^4.6.4"
   }
 }
