--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,6 +1,4 @@
-appId: com.example.nextron
-productName: My Nextron App
-copyright: Copyright © 2018 Yoshihide Shiono
+productName: Reminders App
 directories:
   output: dist
   buildResources: resources
