--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nextron",
     "build": "nextron build",
     "postinstall": "electron-builder install-app-deps",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
@@ -24,23 +25,38 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/core": "7.16.0",
+    "@babel/eslint-parser": "7.16.3",
+    "@babel/preset-react": "7.16.0",
     "@types/jest": "^28.1.4",
-    "@types/node": "^16.11.7",
+    "@types/node": "16.11.12",
     "@types/react": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "5.6.0",
+    "@typescript-eslint/parser": "5.6.0",
     "autoprefixer": "^10.4.7",
     "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
+    "eslint": "8.4.1",
+    "eslint-config-airbnb": "19.0.2",
+    "eslint-config-airbnb-typescript": "16.1.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-wesbos": "3.0.2",
+    "eslint-plugin-html": "6.2.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-react-hooks": "4.3.0",
     "jest-environment-jsdom": "^28.1.2",
     "next": "^12.1.6",
     "nextron": "^8.1.0",
     "postcss": "^8.4.13",
+    "prettier": "2.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "tailwindcss": "^3.0.24",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
-    "typescript": "^4.6.4"
+    "typescript": "4.5.2"
   }
 }
