--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["wesbos/typescript"],
   "rules": {
     "import/no-unresolved": "off", // TS server handles this; also conflicting with baseUrl imports
-    "jsx-a11y/no-redundant-roles": "off" // There's no implicit role at least when querying by role with jest
+    "jsx-a11y/no-redundant-roles": "off", // There's no implicit role at least when querying by role with jest
+    "no-undef": "off" // Namespaces like Electron don't work with this
   }
 }
